Included meta description

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive Resume Template">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="author" content="Johnnatan Messias">
+	<meta name="description"
+		content="I am a Ph.D. student at the Max Planck Institute for Software Systems (MPI-SWS) in the Social Computing Research group. I am advised by Dr. Krishna P. Gummadi. I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG) with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP) in 2015.">
+	<meta property="og:image" content="assets/images/profile.png">
+	<meta property="og:image:type" content="image/jpeg">
+	<meta property="og:image:width" content="1794">
+	<meta property="og:image:height" content="884">
+	<meta name="keywords"
+		content="scientist, science, cientista, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação">
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
