Fixed preview image on meta

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
 		content="I am a Ph.D. student at the Max Planck Institute for Software Systems (MPI-SWS) in the Social Computing Research group. I am advised by Dr. Krishna P. Gummadi. I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG) with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP) in 2015.">
-	<meta property="og:image" content="assets/images/profile.png">
+	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.png">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="1794">
 	<meta property="og:image:height" content="884">
