--- a/index.html
+++ b/index.html
@@ -1402,7 +1402,7 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards
 							</h2>
 							<ul>
-								<li>Granted a scholarship from the Brazilian Scientific Exchange Program (<a
+								<li>Granted a scholarship in 2013 from the Brazilian Scientific Exchange Program (<a
 										href="http://capes.gov.br/images/stories/download/diversos/folder-SWB.pdf">Science
 										without Borders -
 										CAPES</a>) for Academic Excellence to study in a European University for
