--- a/index.html
+++ b/index.html
@@ -1357,6 +1357,12 @@
 							</h2>
 							<ul class="list-unstyled">
 								<li>
+									<a href="https://johnnatan-messias.github.io/covid19/" target="_blank">
+										<strong>Covid-19 monitor:</strong>
+									</a> A system to help people understand the pandemic.
+								</li>
+								<br>
+								<li>
 									<a href="https://www.eleicoessemfake.dcc.ufmg.br/" target="_blank">
 										<strong>Eleições sem Fake:</strong>
 									</a> Many systems to help with the Fake news problem.
