--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
 								<li>
 									<a href="https://johnnatan-messias.github.io/covid19/" target="_blank">
 										<strong>Covid-19 monitor:</strong>
-									</a> A system to help people understand the pandemic.
+									</a> A system to help people understand the pandemic data.
 								</li>
 								<br>
 								<li>
