Fixed spaces between sessions

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 							<div class="resume-section-content">
 								<div class="resume position-relative">
-									<article class="resume position-relative pb-5">
+									<article class="resume position-relative mb-5">
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h4 class="resume-timeline-item-header font-weight-bold mb-1">Journals
@@ -521,7 +521,7 @@
 										</ul>
 
 									</article>
-									<article class="resume position-relative pb-5">
+									<article class="resume position-relative mb-5">
 
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
