Included Ph.D. in Education

--- a/index.html
+++ b/index.html
@@ -1452,6 +1452,12 @@
 							<div class="resume-section-content">
 								<ul class="list-unstyled">
 									<li class="mb-2">
+										<div class="resume-degree font-weight-bold">Ph.D. in Computer Science</div>
+										<div class="resume-degree-org"><a href="https://mpi-sws.org">Max Planck Institute for Software Systems (MPI-SWS)</a></div>
+										<div class="resume-degree-org"><a href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a></div>
+										<div class="resume-degree-time">2018 - present</div>
+									</li>
+									<li class="mb-2">
 										<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
 										<div class="resume-degree-org"><a href="https://ufmg.br">Universidade Federal de
 												Minas Gerais (UFMG)</a></div>
