Renamed Systems Developed to Systems and Aplications

--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
 
 						</section>
 						<section class="resume-section experience-section mb-5">
-							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Systems Developed
+							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Systems and Applications
 							</h2>
 							<ul class="list-unstyled">
 								<li>
