Included Machine Learning as an interest

--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,7 @@
 									<li class="mb-1">Blockchains</li>
 									<li class="mb-1">Data Analysis</li>
 									<li class="mb-1">Social Networks</li>
+									<li class="mb-1">Machine Learning</li>
 								</ul>
 							</div>
 						</section>
