--- a/index.html
+++ b/index.html
@@ -1445,67 +1445,56 @@
 						<section class="resume-section experience-section mb-5">
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
-							<h6>2020</h6>
 							<ul>
-								<li> Countering Misinformation on Social Media Platforms. <a
+								<li>(2020) Countering Misinformation on Social Media Platforms. <a
 										href="https://www.thoughtworks.com/locations/brasil/">ThoughtWorks</a>. Belo
 									Horizonte, BR.
 								</li>
-								<li> Countering Misinformation on Social Media Platforms. <a
+								<li>(2020) Countering Misinformation on Social Media Platforms. <a
 										href="https://smart.inovamedialab.org/2020-digital-methods/theme/">SMART Data
 										Sprint 2020</a>. Lisbon, PT.
 								</li>
-							</ul>
-							<h6>2019</h6>
-							<ul>
-								<li>(Mis)Information Dissemination in WhatsApp: Gathering, Analyzing and
+
+								<li>(2019) (Mis)Information Dissemination in WhatsApp: Gathering, Analyzing and
 									Countermeasures. 5th International
 									Conference on Computational Social Science (IC2S2’19). Amsterdam, NL.</li>
-							</ul>
-							<h6>2016</h6>
-							<ul>
-								<li>From Migration Corridors to Clusters: The Value of Google+ Data for Migration
+
+								<li>(2016) From Migration Corridors to Clusters: The Value of Google+ Data for Migration
 									Studies. IEEE/ACM Inter-
 									national Conference on Advances in Social Networks Analysis and Mining (ASONAM’16).
 									San Francisco, US.</li>
-								<li>Towards Sentiment Analysis for Mobile Devices. IEEE/ACM International Conference on
+								<li>(2016) Towards Sentiment Analysis for Mobile Devices. IEEE/ACM International
+									Conference on
 									Advances in Social
 									Networks Analysis and Mining (ASONAM’16). San Francisco, US.</li>
-							</ul>
-							<h6>2015</h6>
-							<ul>
-								<li>Bazinga! Caracterizando e Detectando Sarcasmo e Ironia no Twitter. Brazilian
+
+								<li>(2015) Bazinga! Caracterizando e Detectando Sarcasmo e Ironia no Twitter. Brazilian
 									Workshop on Social Network
 									Analysis and Mining (BraSNAM’15). Recife, BR.
 								</li>
-								<li>Brazil Around the World: Characterizing and Detecting Brazilian Emigrants Using
+								<li>(2015) Brazil Around the World: Characterizing and Detecting Brazilian Emigrants
+									Using
 									Google+. Brazilian Sym-
 									posium on Multimedia and the Web (WebMedia’15). Manaus, BR.</li>
-							</ul>
-							<h6>2013</h6>
-							<ul>
-								<li>Bots Sociais: Como robôs podem se tornar pessoas influentes no Twitter? XXXII
+
+								<li>(2013) Bots Sociais: Como robôs podem se tornar pessoas influentes no Twitter?
+									XXXII
 									Concurso de Trabalhos de
 									Iniciação Científica (CTIC’13). Maceió, BR.</li>
-							</ul>
-							<h6>2012</h6>
-							<ul>
-								<li>Sigam-me os bons! Transformando robôs em pessoas influentes no Twitter. Brazilian
+
+								<li>(2012) Sigam-me os bons! Transformando robôs em pessoas influentes no Twitter.
+									Brazilian
 									Workshop on Social
 									Network Analysis and Mining (BraSNAM’12). Curitiba, BR.</li>
-							</ul>
-							<h6>2011</h6>
-							<ul>
-								<li>UGUIDE: Rede Social Móvel Aplicada a Educação. XIX Seminário de Iniciação
+								<li>(2011) UGUIDE: Rede Social Móvel Aplicada a Educação. XIX Seminário de
+									Iniciação
 									Científica da UFOP. Ouro
 									Preto, BR.</li>
-								<li>Computação Móvel: Tendências e Android. 6a Semana da Informática -
+								<li>(2011) Computação Móvel: Tendências e Android. 6a Semana da Informática -
 									IFSULDEMINAS. Muzambinho,
 									BR.</li>
-							</ul>
-							<h6>2010</h6>
-							<ul>
-								<li>BlueGuide - Uma Plataforma de Suporte ao Turista em Ouro Preto. I Seminário de
+								<li>(2010) BlueGuide - Uma Plataforma de Suporte ao Turista em Ouro Preto. I Seminário
+									de
 									Pesquisa do PPGCC &
 									UFOP e I Fórum de Alunos e Ex-Alunos do DECOM. Ouro Preto, BR.</li>
 							</ul>
