--- a/index.html
+++ b/index.html
@@ -1581,11 +1581,13 @@
 
 	<footer class="footer text-center pt-2 pb-5">
 		<!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-		<small class="copyright">Copyright © Johnnatan Messias, 2020. Design adapted from the HTML5 template by <a
-				href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a></small>
+		<small>© Copyright by Max Planck Institute for Software Systems 2018. All rights reserved. <a
+				href="https://imprint.mpi-klsb.mpg.de/sws/people/johnme">Imprint</a> / <a
+				href="https://data-protection.mpi-klsb.mpg.de/sws/people/johnme">Data Protection</a></small>
+		</br>
+		<small class="copyright">Design adapted from the HTML5 template by <a href="http://themes.3rdwavemedia.com"
+				target="_blank">Xiaoying Riley</a></small>
 	</footer>
-
-
 
 </body>
 
