--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
 							group. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
 								Krishna P. Gummadi</a>. I completed my Master's degree in Computer Science at the
 							Universidade Federal de Minas
-							Gerais (UFMG) with <a href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
+							Gerais (UFMG), Brazil, with <a href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
 								Fabrício Benevenuto</a> as my advisor. During my MSc, I also held two research intern
 							positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd
 							University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science
 							Without Borders
 							- CAPES). I completed my undergraduate degree in Computer Science at the Universidade
-							Federal de Ouro Preto (UFOP) in 2015.
+							Federal de Ouro Preto (UFOP), Brazil, in 2015.
 							<br>
 							<br>
 							<u>My complete name</u>: Johnnatan Messias Peixoto Afonso.</p>
