Updated Website description

--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
 							Federal de Ouro Preto (<a href="https://ufop.br">UFOP</a>), Brazil, in 2015.
 							<br>
 							<br>
+							I have also worked on machine learning projects for risk and loan default prediction and health 
+							insurance characterization and forecasting. One of the projects was awarded as the most innovative health 
+							software in Brazil in 2019, according to IT Forum 365, promoted by PwC and ITMidia. In 2018, 
+							I joined the "Eleições sem Fake" project to provide transparency along with the Brazilian elections and 
+							counter misinformation.
+							<br>
+							<br>
 							<u>My complete name</u>: Johnnatan Messias Peixoto Afonso.</p>
 					</div>
 				</section>
