Added month and date for commit times paper

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 											<li>
 												<script>document.write(get_authors(["johnnatan_messias", "mohamed_alzayat", "balakrishnan_chandrasekaran", "krishna_gummadi"]))</script>
 											</li>
-											<li>In Proceedings of the Second International Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20)</li>
+											<li>In Proceedings of the Second International Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20). August, 2020.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#sdbd-commit-times"
