--- a/index.html
+++ b/index.html
@@ -565,6 +565,14 @@
 														target="_blank">
 														<span class="badge badge-secondary badge-pill">BibTeX</span></a>
 												</li>
+												<li class="list-inline-item"><a href="https://youtu.be/o_KZpNPJQiE"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Talk</span></a>
+												</li>
+												<li class="list-inline-item"><a href="pdf/messias-sdbd-20-slides.pdf"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Slides</span></a>
+												</li>
 											</ul>
 											</li>
 											<div id="sdbd-commit-times" class="collapse">
@@ -1494,6 +1502,9 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
+								<li>(2020) On Blockchain Commit Times: An analysis of how miners choose Bitcoin transactions. <a
+									href="https://youtu.be/o_KZpNPJQiE">Second International KDD Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20)</a>.
+								</li>
 								<li>(2020) Countering Misinformation on Social Media Platforms. <a
 										href="https://www.thoughtworks.com/locations/brasil/">ThoughtWorks</a>. Belo
 									Horizonte, BR.
