--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 														target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
-												<li class="list-inline-item"><a href="#"
+												<li class="list-inline-item"><a href="bibtex/messias-sdbd20.bib"
 														target="_blank">
 														<span class="badge badge-secondary badge-pill">BibTeX</span></a>
 												</li>
