Fixed authors list for "Managing Longitudinal Exposure of Socially Shared Data on the Twitter Social Media".

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 													Longitudinal Exposure of Socially Shared Data on the Twitter Social
 													Media</h6>
 											<li>
-												<script>document.write(get_authors(["juhi_kulshrestha", "motahhare_eslami", "johnnatan_messias", "bilal_zafar", "saptarshi_ghosh", "krishna_gummadi", "karrie_karahalios"]))</script>
+												<script>document.write(get_authors(["mainack_mondal", "johnnatan_messias", "saptarshi_ghosh", "krishna_gummadi", "aniket_kate"]))</script>
 											</li>
 											<li>International Journal of Advances in Engineering Sciences and Applied
 												Mathematics (Special Issue on Data
