Added Webmedia'15 paper

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Selected
 								Publications
 							</h2>
-							<h6>For full list of publications, kindly check my <a
+							<h6>For a full list of peer-reviewed conference and journal publications, kindly check my <a
 									href="https://scholar.google.com/citations?user=EoGEeFAAAAAJ">Google Scholar</a> or
 								<a href="https://dblp.uni-trier.de/pers/hd/m/Messias:Johnnatan">DBLP</a> Profile.
 							</h6>
@@ -272,10 +272,11 @@
 													Modeling Coordinated vs. P2P Mining: An Analysis of Inefficiency and
 													Inequality in Proof-of-Work Blockchains</h6>
 											<li>
-												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script> <font color="E7421F">To appear</font>.
+												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
+												<font color="E7421F">To appear</font>.
 											</li>
 											<li>
-												
+
 											</li>
 
 											<ul class="list-inline">
@@ -1345,6 +1346,63 @@
 												</p>
 											</div>
 										</ul>
+
+
+
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Brazil Around the World: Characterizing and Detecting Brazilian Emigrants Using Google+</h6>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias","gabriel_magno","fabricio_benevenuto","adriano_veloso","virgilio_almeida"]))</script>
+											</li>
+											<li>In Proceedings of 21st Brazilian Symposium on Multimedia and the Web (WebMedia'15). Manaus, Brazil. October,
+												2015.
+											</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#brazil_migration"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+												<li class="list-inline-item"><a href="pdf/messias_webmedia15.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://dl.acm.org/doi/10.1145/2820426.2820447"
+														target="_blank">
+														<span class="badge badge-secondary badge-pill">BibTeX</span></a>
+												</li>
+												<li class="list-inline-item"><a
+														href="https://prezi.com/g5umhzfqsepc/brazil-around-the-world-characterizing-and-detecting-brazilian-emigrants-using-google-webmedia15/"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Slides</span>
+													</a></li>
+
+											</ul>
+											</li>
+											<div id="brazil_migration" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> Currently available data about people whose left their home country to live in a foreign
+													country does not adequately capture the standards of contemporary global migration flows. A new trend for
+													migration studies is to study the data from the Internet, either by Social Networks or other data in the
+													WEB. In this study, we collected users data from the social network Google+ to investigate which features
+													of Brazilian users are relevant to classify them as a possible emigrant. Our study uses machine learning
+													techniques, SVM. We selected some features to compose our dataset. Our results show that the network features
+													were the ones that had greater capacity for discrimination. The most relevant for the prediction of Brazilian
+													emigrants users are, in order: reciprocity, PageRank, in-degree, clustering coefficient and ratio of incoming
+													foreigners.
+												</p>
+											</div>
+										</ul>
+
+
+
+
+
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
