--- a/index.html
+++ b/index.html
@@ -239,6 +239,10 @@
 														data-toggle="collapse">
 														<span class="badge badge-dark badge-pill">Abstract</span></a>
 												</li>
+												<li class="list-inline-item"><a href="pdf/messias_imc2021_btc_tx_ordering.pdf"
+														target="_blank">
+														<span class="badge badge-danger badge-pill">PDF</span></a>
+												</li>
 											</ul>
 											</li>
 											<div id="imc-tx-prioritization" class="collapse">
