Included bitcoin data set

--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
 														href="pdf/messias_imc2021_btc_tx_ordering.pdf" target="_blank">
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
+												<li class="list-inline-item"><a
+													href="https://github.com/johnnatan-messias/blockchain-transaction-ordering/"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Data</span>
+												</a></li>
 											</ul>
 											</li>
 											<div id="imc-tx-prioritization" class="collapse">
