--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
 												<script>document.write(get_authors(["johnnatan_messias", "mohamed_alzayat", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau", "alan_mislove"]))</script>
 											</li>
 											<li>In Proceedings of the ACM SIGCOMM Internet Measurement Conference (IMC
-												2021). Virtual Event. November, 2021. <font color="E7421F">To appear
-												</font>.</li>
+												2021). Virtual Event. November, 2021.</li>
 
 											<ul class="list-inline">
 												<li class="list-inline-item"><a href="#imc-tx-prioritization"
@@ -247,6 +246,11 @@
 													href="https://github.com/johnnatan-messias/blockchain-transaction-ordering/"
 													target="_blank">
 													<span class="badge badge-warning badge-pill">Data</span>
+												</a></li>
+												<li class="list-inline-item"><a
+													href="https://www.youtube.com/watch?v=B2tTLte9LGo"
+													target="_blank">
+													<span class="badge badge-warning badge-pill">Talk</span>
 												</a></li>
 											</ul>
 											</li>
@@ -284,8 +288,7 @@
 													Modeling Coordinated vs. P2P Mining: An Analysis of Inefficiency and
 													Inequality in Proof-of-Work Blockchains</h6>
 											<li>
-												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
-												<font color="E7421F">To appear</font>.
+												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>.
 											</li>
 											<li>
 
