Updated text description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Johnnatan Messias">
 	<meta name="description"
-		content="I am a Ph.D. student at the Max Planck Institute for Software Systems (MPI-SWS) in the Social Computing Research group. I am advised by Dr. Krishna P. Gummadi. I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG) with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP) in 2015.">
+		content="I am a Ph.D. student at the Max Planck Institute for Software Systems (MPI-SWS) in the Social Computing Research group. I am advised by Dr. Krishna P. Gummadi and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). I completed my Master's degree in Computer Science at the Universidade Federal de Minas Gerais (UFMG) with Dr. Fabrício Benevenuto as my advisor. During my MSc, I also held two research intern positions at MPI-SWS in Saarbrücken, Germany. I studied Computer Science at Eötvös Loránd University (ELTE) in Budapest, Hungary, in 2013/2014 during my exchange program (Science Without Borders - CAPES). I completed my undergraduate degree in Computer Science at the Universidade Federal de Ouro Preto (UFOP) in 2015.">
 	<meta property="og:image" content="https://johnnatan-messias.github.io/assets/images/profile.jpg">
 	<meta property="og:image:type" content="image/jpeg">
 	<meta property="og:image:width" content="652">
@@ -177,7 +177,7 @@
 								href="https://www.mpi-sws.org/">MPI-SWS</a>) in the <a
 								href="http://socialnetworks.mpi-sws.org">Social Computing Research</a>
 							group. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
-								Krishna P. Gummadi</a>. I completed my Master's degree in Computer Science at the
+								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). I completed my Master's degree in Computer Science at the
 							Universidade Federal de Minas
 							Gerais (<a href="https://ufmg.br">UFMG</a>), Brazil, with <a
 								href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
