--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a Ph.D. student at the Max Planck Institute for Software Systems (<a
+						<p class="mb-0">I am a research intern at <a href="https://chainlinklabs.com">Chainlink Labs</a> and a Ph.D. student at the Max Planck Institute for Software Systems (<a
 								href="https://www.mpi-sws.org/">MPI-SWS</a>) in the <a
 								href="http://socialnetworks.mpi-sws.org">Social Computing Research</a>
 							group. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
@@ -1851,9 +1851,13 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
-								<li>(2020) On Blockchain Commit Times: An analysis of how miners choose Bitcoin
-									transactions. <a href="https://youtu.be/o_KZpNPJQiE">Second International KDD
-										Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20)</a>.
+								<li>(2021) <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque Transaction Ordering in the Bitcoin Blockchain: The
+									Case for Chain Neutrality</a>. ACM SIGCOMM Internet Measurement Conference (IMC 2021).
+									Virtual Event.
+								</li>
+								<li>(2020) <a href="https://youtu.be/o_KZpNPJQiE">On Blockchain Commit Times: An analysis of how miners choose Bitcoin
+									transactions</a>. Second International KDD
+										Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20).
 								</li>
 								<li>(2020) Countering Misinformation on Social Media Platforms. <a
 										href="https://www.thoughtworks.com/locations/brasil/">ThoughtWorks</a>. Belo
