Changed the text to reflect my current job position

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:image:width" content="652">
 	<meta property="og:image:height" content="653">
 	<meta name="keywords"
-		content="scientist, science, cientista, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação">
+		content="scientist, science, cientista, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -132,7 +132,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
-							<div class="title mb-3">Ph.D. Student at MPI-SWS</div>
+							<div class="title mb-2">Research Intern at Chainlink Labs</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li>
@@ -200,7 +200,7 @@
 							counter misinformation.
 							<br>
 							<br>
-							<u>My complete name</u>: Johnnatan Messias Peixoto Afonso.
+							<u>My full name</u>: <span style="color:#FF8C00">Johnnatan Messias Peixoto Afonso</span>.
 						</p>
 					</div>
 				</section>
