Updated current job position

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 						<div class="primary-info">
 							<h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Johnnatan Messias</h1>
-							<div class="title mb-2">Research Intern at Chainlink Labs</div>
+							<div class="title mb-2">Research Assistant at MPI-SWS</div>
 							<ul class="list-unstyled">
 								<li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2"
 											data-fa-transform="grow-3"></i>johnme [AT] mpi-sws [DOT] org</a></li>
@@ -173,11 +173,13 @@
 				<section class="resume-section summary-section mb-5">
 					<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">About me</h2>
 					<div class="resume-section-content">
-						<p class="mb-0">I am a research intern at <a href="https://chainlinklabs.com">Chainlink Labs</a> and a Ph.D. student at the Max Planck Institute for Software Systems (<a
-								href="https://www.mpi-sws.org/">MPI-SWS</a>) in the <a
-								href="http://socialnetworks.mpi-sws.org">Social Computing Research</a>
-							group. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
-								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on proof-of-work blockchains and on Decentralized Finance (DeFi). I completed my Master's degree in Computer Science at the
+						<p class="mb-0">I am a research assistant at the <a
+							href="https://www.mpi-sws.org/">Max Planck Institute for Software Systems (MPI-SWS)</a> in the <a
+							href="http://socialnetworks.mpi-sws.org">Social Computing Research</a>
+						group and a Ph.D. student at the <a href="https://www.uni-saarland.de/en/">Universität des Saarlandes (UdS)</a>. I am advised by <a href="http://www.mpi-sws.org/~gummadi/">Dr.
+								Krishna P. Gummadi</a> and my Ph.D. research focuses on fairness concerns on
+							proof-of-work blockchains and on Decentralized Finance (DeFi). I completed my Master's
+							degree in Computer Science at the
 							Universidade Federal de Minas
 							Gerais (<a href="https://ufmg.br">UFMG</a>), Brazil, with <a
 								href="https://homepages.dcc.ufmg.br/~fabricio/">Dr.
@@ -243,15 +245,15 @@
 														<span class="badge badge-danger badge-pill">PDF</span></a>
 												</li>
 												<li class="list-inline-item"><a
-													href="https://github.com/johnnatan-messias/blockchain-transaction-ordering/"
-													target="_blank">
-													<span class="badge badge-warning badge-pill">Data</span>
-												</a></li>
+														href="https://github.com/johnnatan-messias/blockchain-transaction-ordering/"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Data</span>
+													</a></li>
 												<li class="list-inline-item"><a
-													href="https://www.youtube.com/watch?v=B2tTLte9LGo"
-													target="_blank">
-													<span class="badge badge-warning badge-pill">Talk</span>
-												</a></li>
+														href="https://www.youtube.com/watch?v=B2tTLte9LGo"
+														target="_blank">
+														<span class="badge badge-warning badge-pill">Talk</span>
+													</a></li>
 											</ul>
 											</li>
 											<div id="imc-tx-prioritization" class="collapse">
@@ -288,7 +290,8 @@
 													Modeling Coordinated vs. P2P Mining: An Analysis of Inefficiency and
 													Inequality in Proof-of-Work Blockchains</h6>
 											<li>
-												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>.
+												<script>document.write(get_authors(["mohamed_alzayat", "johnnatan_messias", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
+												.
 											</li>
 											<li>
 
@@ -1851,13 +1854,16 @@
 							<h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Talks
 							</h2>
 							<ul>
-								<li>(2021) <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque Transaction Ordering in the Bitcoin Blockchain: The
-									Case for Chain Neutrality</a>. ACM SIGCOMM Internet Measurement Conference (IMC 2021).
+								<li>(2021) <a href="https://www.youtube.com/watch?v=B2tTLte9LGo">Selfish & Opaque
+										Transaction Ordering in the Bitcoin Blockchain: The
+										Case for Chain Neutrality</a>. ACM SIGCOMM Internet Measurement Conference (IMC
+									2021).
 									Virtual Event.
 								</li>
-								<li>(2020) <a href="https://youtu.be/o_KZpNPJQiE">On Blockchain Commit Times: An analysis of how miners choose Bitcoin
-									transactions</a>. Second International KDD
-										Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20).
+								<li>(2020) <a href="https://youtu.be/o_KZpNPJQiE">On Blockchain Commit Times: An
+										analysis of how miners choose Bitcoin
+										transactions</a>. Second International KDD
+									Workshop on Smart Data for Blockchain and Distributed Ledger (SDBD'20).
 								</li>
 								<li>(2020) Countering Misinformation on Social Media Platforms. <a
 										href="https://www.thoughtworks.com/locations/brasil/">ThoughtWorks</a>. Belo
