--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 			"balakrishnan_chandrasekaran": ["Balakrishnan Chandrasekaran", "https://balakrishnanc.github.io"],
 			"patrick_loiseau": ["Patrick Loiseau", "http://lig-membres.imag.fr/loiseapa/"],
 			"alan_mislove": ["Alan Mislove", "https://mislove.org"],
+			"vabuk_pahari": ["Vabuk Pahari", "https://vpahari.github.io"]
 
 		};
 		function parse_author_to_html(author) {
@@ -229,6 +230,36 @@
 
 									<article class="resume position-relative mb-5">
 										<!--//resume-timeline-item-header-->
+
+										<ul class="list-inline">
+											<li>
+												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
+													Dissecting Bitcoin and Ethereum Transactions: On the Lack of
+													Transaction Contention and Prioritization Transparency in
+													Blockchains</h6>
+											<li>
+												<script>document.write(get_authors(["johnnatan_messias", "vabuk_pahari", "balakrishnan_chandrasekaran", "krishna_gummadi", "patrick_loiseau"]))</script>
+											</li>
+											<li>In Proceedings of the Financial Cryptography and Data Security (FC
+												2023). Bol, Brač, Croatia. May, 2023.</li>
+
+											<ul class="list-inline">
+												<li class="list-inline-item"><a href="#fc-tx-prioritization"
+														data-toggle="collapse">
+														<span class="badge badge-dark badge-pill">Abstract</span></a>
+												</li>
+											</ul>
+											</li>
+											<div id="fc-tx-prioritization" class="collapse">
+												<p class="font-italic"><b>Abstract:</b> TBA
+
+												</p>
+											</div>
+										</ul>
+
+
+
+
 										<ul class="list-inline">
 											<li>
 												<h6 class="resume-timeline-item-desc-heading font-weight-bold">
