Added google meta data

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:image:height" content="653">
 	<meta name="keywords"
 		content="scientist, science, cientista, pesquisador, doutorado, phd, student, social media, blockchain, blockchains, germany, alemanha, brazil, brasil, computer science, ciência da computação, johnnatan messias, johnnatan afonso, johnnatan messias peixoto afonso, johnnatan messias p. afonso">
-
+	<meta name="google-site-verification" content="D1YxGMlR00iEhOLqhWg3pUbWsu7CkpXuxN6o7egxmoc" />
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
